--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-__pycache__/
-venv/
-venv1/
+
+.idea/
+Python_exercise/.idea/
+Python_exercise/__pycache__/
+Python_exercise/venv/
+Python_exercise/venv1/
